Resovle an issue from bibtex

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 8a3a0125fc12ccbe2a0b305c051baa4e1c28c0c4
+% Commit: 4d781c2487f2252b8f5ea0fbf944010da6f58a4f
 % Date: 2023-11-13
 % ---------------------------
 
@@ -11384,6 +11384,18 @@
 }
 @incollection{bourgain:02:on*1,
   author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
+}
+@incollection{bourgain:02:on*2,
+  author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
   journal       = {J. Anal. Math.},
@@ -11398,35 +11410,7 @@
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
 }
-@incollection{bourgain:02:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
-}
-@article{bourgain:02:on*3,
-  author        = {Bourgain, Jean},
-  title         = {On the global {C}auchy problem for the nonlinear {S}chr\"{o}dinger equation},
-  journal       = {Proc. Natl. Acad. Sci. USA},
-  fjournal      = {Proceedings of the National Academy of Sciences of the United States of America},
-  volume        = {99},
-  year          = {2002},
-  number        = {24},
-  pages         = {15262--15268},
-  issn          = {0027-8424,1091-6490},
-  mrclass       = {35Q55 (35G25)},
-  mrnumber      = {1946761},
-  mrreviewer    = {Victor\ V.\ Zharinov},
-  doi           = {10.1073/pnas.222494399},
-  url           = {https://doi.org/10.1073/pnas.222494399}
-}
-@incollection{bourgain:02:on*4,
+@incollection{bourgain:02:on*3,
   author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential. {II}},
   note          = {Dedicated to the memory of Tom Wolff},
@@ -11441,6 +11425,22 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02786578},
   url           = {https://doi.org/10.1007/BF02786578}
+}
+@article{bourgain:02:on*4,
+  author        = {Bourgain, Jean},
+  title         = {On the global {C}auchy problem for the nonlinear {S}chr\"{o}dinger equation},
+  journal       = {Proc. Natl. Acad. Sci. USA},
+  fjournal      = {Proceedings of the National Academy of Sciences of the United States of America},
+  volume        = {99},
+  year          = {2002},
+  number        = {24},
+  pages         = {15262--15268},
+  issn          = {0027-8424,1091-6490},
+  mrclass       = {35Q55 (35G25)},
+  mrnumber      = {1946761},
+  mrreviewer    = {Victor\ V.\ Zharinov},
+  doi           = {10.1073/pnas.222494399},
+  url           = {https://doi.org/10.1073/pnas.222494399}
 }
 @article{bourgain:02:on*5,
   author        = {Bourgain, Jean},
@@ -11474,23 +11474,7 @@
   doi           = {10.1007/978-3-540-36428-3\_8},
   url           = {https://doi.org/10.1007/978-3-540-36428-3\_8}
 }
-@article{bourgain:03:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
-  journal       = {Geom. Funct. Anal.},
-  fjournal      = {Geometric and Functional Analysis},
-  volume        = {13},
-  year          = {2003},
-  number        = {2},
-  pages         = {334--365},
-  issn          = {1016-443X,1420-8970},
-  mrclass       = {11K55 (28A80)},
-  mrnumber      = {1982147},
-  mrreviewer    = {Ben\ Joseph\ Green},
-  doi           = {10.1007/s000390300008},
-  url           = {https://doi.org/10.1007/s000390300008}
-}
-@incollection{bourgain:03:on*2,
+@incollection{bourgain:03:on*1,
   author        = {Bourgain, J.},
   title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
   booktitle     = {Geometric aspects of functional analysis},
@@ -11505,6 +11489,22 @@
   mrreviewer    = {Apostolos\ A.\ Giannopoulos},
   doi           = {10.1007/978-3-540-36428-3\_9},
   url           = {https://doi.org/10.1007/978-3-540-36428-3\_9}
+}
+@article{bourgain:03:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
+  journal       = {Geom. Funct. Anal.},
+  fjournal      = {Geometric and Functional Analysis},
+  volume        = {13},
+  year          = {2003},
+  number        = {2},
+  pages         = {334--365},
+  issn          = {1016-443X,1420-8970},
+  mrclass       = {11K55 (28A80)},
+  mrnumber      = {1982147},
+  mrreviewer    = {Ben\ Joseph\ Green},
+  doi           = {10.1007/s000390300008},
+  url           = {https://doi.org/10.1007/s000390300008}
 }
 @incollection{bourgain:03:random,
   author        = {Bourgain, J.},
@@ -11555,22 +11555,6 @@
   url           = {https://doi.org/10.1016/j.crma.2004.03.027}
 }
 @incollection{bourgain:04:on,
-  author        = {Bourgain, J.},
-  title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {1850},
-  pages         = {77--99},
-  publisher     = {Springer, Berlin},
-  year          = {2004},
-  isbn          = {3-540-22360-6},
-  mrclass       = {82B44 (47B39 47B80 47N55)},
-  mrnumber      = {2087153},
-  mrreviewer    = {David\ Damanik},
-  doi           = {10.1007/978-3-540-44489-3\_9},
-  url           = {https://doi.org/10.1007/978-3-540-44489-3\_9}
-}
-@incollection{bourgain:04:on*1,
   author        = {Bourgain, Jean},
   title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
   note          = {Partial differential equations and applications},
@@ -11585,6 +11569,22 @@
   mrnumber      = {2026184},
   doi           = {10.3934/dcds.2004.10.75},
   url           = {https://doi.org/10.3934/dcds.2004.10.75}
+}
+@incollection{bourgain:04:on*1,
+  author        = {Bourgain, J.},
+  title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {1850},
+  pages         = {77--99},
+  publisher     = {Springer, Berlin},
+  year          = {2004},
+  isbn          = {3-540-22360-6},
+  mrclass       = {82B44 (47B39 47B80 47N55)},
+  mrnumber      = {2087153},
+  mrreviewer    = {David\ Damanik},
+  doi           = {10.1007/978-3-540-44489-3\_9},
+  url           = {https://doi.org/10.1007/978-3-540-44489-3\_9}
 }
 @article{bourgain:04:remark,
   author        = {Bourgain, Jean},
@@ -12341,23 +12341,7 @@
   doi           = {10.1134/s0081543813010045},
   url           = {https://doi.org/10.1134/s0081543813010045}
 }
-@incollection{bourgain:13:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
-  booktitle     = {Asymptotic geometric analysis},
-  series        = {Fields Inst. Commun.},
-  volume        = {68},
-  pages         = {39--44},
-  publisher     = {Springer, New York},
-  year          = {2013},
-  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
-  mrclass       = {37D50 (37D25)},
-  mrnumber      = {3076146},
-  mrreviewer    = {Boris\ Hasselblatt},
-  doi           = {10.1007/978-1-4614-6406-8\_3},
-  url           = {https://doi.org/10.1007/978-1-4614-6406-8\_3}
-}
-@article{bourgain:13:on*2,
+@article{bourgain:13:on*1,
   author        = {Bourgain, J.},
   title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
   journal       = {Israel J. Math.},
@@ -12372,6 +12356,22 @@
   mrreviewer    = {Gergely\ Harcos},
   doi           = {10.1007/s11856-013-0002-2},
   url           = {https://doi.org/10.1007/s11856-013-0002-2}
+}
+@incollection{bourgain:13:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
+  booktitle     = {Asymptotic geometric analysis},
+  series        = {Fields Inst. Commun.},
+  volume        = {68},
+  pages         = {39--44},
+  publisher     = {Springer, New York},
+  year          = {2013},
+  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
+  mrclass       = {37D50 (37D25)},
+  mrnumber      = {3076146},
+  mrreviewer    = {Boris\ Hasselblatt},
+  doi           = {10.1007/978-1-4614-6406-8\_3},
+  url           = {https://doi.org/10.1007/978-1-4614-6406-8\_3}
 }
 @article{bourgain:13:on*3,
   author        = {Bourgain, J.},
@@ -12512,23 +12512,7 @@
   doi           = {10.1007/978-3-319-09477-9\_7},
   url           = {https://doi.org/10.1007/978-3-319-09477-9\_7}
 }
-@article{bourgain:14:on*4,
-  author        = {Bourgain, Jean},
-  title         = {On toral eigenfunctions and the random wave model},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {201},
-  year          = {2014},
-  number        = {2},
-  pages         = {611--630},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {60G15 (35J05 35P20)},
-  mrnumber      = {3265298},
-  mrreviewer    = {Isamu\ D\^{o}ku},
-  doi           = {10.1007/s11856-014-1037-z},
-  url           = {https://doi.org/10.1007/s11856-014-1037-z}
-}
-@incollection{bourgain:14:on*5,
+@incollection{bourgain:14:on*4,
   author        = {Bourgain, Jean},
   title         = {On the control problem for {S}chr\"{o}dinger operators on tori},
   booktitle     = {Geometric aspects of functional analysis},
@@ -12543,6 +12527,22 @@
   mrreviewer    = {G.\ V.\ Rozenblum},
   doi           = {10.1007/978-3-319-09477-9\_8},
   url           = {https://doi.org/10.1007/978-3-319-09477-9\_8}
+}
+@article{bourgain:14:on*5,
+  author        = {Bourgain, Jean},
+  title         = {On toral eigenfunctions and the random wave model},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {201},
+  year          = {2014},
+  number        = {2},
+  pages         = {611--630},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {60G15 (35J05 35P20)},
+  mrnumber      = {3265298},
+  mrreviewer    = {Isamu\ D\^{o}ku},
+  doi           = {10.1007/s11856-014-1037-z},
+  url           = {https://doi.org/10.1007/s11856-014-1037-z}
 }
 @incollection{bourgain:14:some,
   author        = {Bourgain, Jean},
@@ -13862,7 +13862,22 @@
   doi           = {10.1007/BF02392189},
   url           = {https://doi.org/10.1007/BF02392189}
 }
-@inproceedings{bourgain:84:on,
+@article{bourgain:84:on,
+  author        = {Bourgain, J.},
+  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
+  journal       = {Math. Nachr.},
+  fjournal      = {Mathematische Nachrichten},
+  volume        = {119},
+  year          = {1984},
+  pages         = {41--53},
+  issn          = {0025-584X,1522-2616},
+  mrclass       = {47B37 (44A15 46B20 60G46)},
+  mrnumber      = {774175},
+  mrreviewer    = {D.\ L.\ Burkholder},
+  doi           = {10.1002/mana.19841190104},
+  url           = {https://doi.org/10.1002/mana.19841190104}
+}
+@inproceedings{bourgain:84:on*1,
   author        = {Bourgain, J.},
   title         = {On nonisomorphisms of algebras of analytic functions},
   booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
@@ -13874,7 +13889,7 @@
   mrclass       = {46J15 (32E25)},
   mrnumber      = {763536}
 }
-@article{bourgain:84:on*1,
+@article{bourgain:84:on*2,
   author        = {Bourgain, J.},
   title         = {On bases in the disc algebra},
   journal       = {Trans. Amer. Math. Soc.},
@@ -13889,21 +13904,6 @@
   mrreviewer    = {Jacques\ Mayer},
   doi           = {10.2307/1999476},
   url           = {https://doi.org/10.2307/1999476}
-}
-@article{bourgain:84:on*2,
-  author        = {Bourgain, J.},
-  title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
-  journal       = {Math. Nachr.},
-  fjournal      = {Mathematische Nachrichten},
-  volume        = {119},
-  year          = {1984},
-  pages         = {41--53},
-  issn          = {0025-584X,1522-2616},
-  mrclass       = {47B37 (44A15 46B20 60G46)},
-  mrnumber      = {774175},
-  mrreviewer    = {D.\ L.\ Burkholder},
-  doi           = {10.1002/mana.19841190104},
-  url           = {https://doi.org/10.1002/mana.19841190104}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14018,6 +14018,20 @@
   mrnumber      = {832256}
 }
 @article{bourgain:85:on*1,
+  author        = {Bourgain, J.},
+  title         = {On square functions on the trigonometric system},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {37},
+  year          = {1985},
+  number        = {1},
+  pages         = {20--26},
+  issn          = {0037-9476},
+  mrclass       = {42A50 (42A45)},
+  mrnumber      = {847119},
+  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
+}
+@article{bourgain:85:on*2,
   author        = {Bourgain, Jean},
   title         = {On finitely generated closed ideals in {$H^infty(D)$}},
   journal       = {Ann. Inst. Fourier (Grenoble)},
@@ -14031,20 +14045,6 @@
   mrnumber      = {812323},
   mrreviewer    = {Richard\ Rochberg},
   url           = {http://www.numdam.org/item?id=AIF\_1985\_\_35\_4\_163\_0}
-}
-@article{bourgain:85:on*2,
-  author        = {Bourgain, J.},
-  title         = {On square functions on the trigonometric system},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {37},
-  year          = {1985},
-  number        = {1},
-  pages         = {20--26},
-  issn          = {0037-9476},
-  mrclass       = {42A50 (42A45)},
-  mrnumber      = {847119},
-  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
 }
 @article{bourgain:85:on*3,
   author        = {Bourgain, J.},
@@ -14171,22 +14171,6 @@
 }
 @article{bourgain:86:on*1,
   author        = {Bourgain, J.},
-  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {54},
-  year          = {1986},
-  number        = {2},
-  pages         = {227--241},
-  issn          = {0021-2172},
-  mrclass       = {47A65},
-  mrnumber      = {852479},
-  mrreviewer    = {Vern\ Paulsen},
-  doi           = {10.1007/BF02764943},
-  url           = {https://doi.org/10.1007/BF02764943}
-}
-@article{bourgain:86:on*2,
-  author        = {Bourgain, J.},
   title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {${\bf R}^n$}},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14200,6 +14184,22 @@
   mrreviewer    = {Roger\ L.\ Jones},
   doi           = {10.1007/BF02764955},
   url           = {https://doi.org/10.1007/BF02764955}
+}
+@article{bourgain:86:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {54},
+  year          = {1986},
+  number        = {2},
+  pages         = {227--241},
+  issn          = {0021-2172},
+  mrclass       = {47A65},
+  mrnumber      = {852479},
+  mrreviewer    = {Vern\ Paulsen},
+  doi           = {10.1007/BF02764943},
+  url           = {https://doi.org/10.1007/BF02764943}
 }
 @article{bourgain:86:on*3,
   author        = {Bourgain, J.},
@@ -14510,7 +14510,23 @@
   doi           = {10.1007/BF02796120},
   url           = {https://doi.org/10.1007/BF02796120}
 }
-@incollection{bourgain:88:on,
+@article{bourgain:88:on,
+  author        = {Bourgain, J.},
+  title         = {On the maximal ergodic theorem for certain subsets of the integers},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {39--72},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937581},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776301},
+  url           = {https://doi.org/10.1007/BF02776301}
+}
+@incollection{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -14526,7 +14542,7 @@
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
 }
-@article{bourgain:88:on*1,
+@article{bourgain:88:on*2,
   author        = {Bourgain, J.},
   title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
   journal       = {Israel J. Math.},
@@ -14541,22 +14557,6 @@
   mrreviewer    = {Alberto\ de la Torre},
   doi           = {10.1007/BF02776302},
   url           = {https://doi.org/10.1007/BF02776302}
-}
-@article{bourgain:88:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the maximal ergodic theorem for certain subsets of the integers},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {39--72},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937581},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776301},
-  url           = {https://doi.org/10.1007/BF02776301}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15046,21 +15046,6 @@
 }
 @article{bourgain:93:on*2,
   author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {60},
-  year          = {1993},
-  pages         = {21--32},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {11M99 (28A75)},
-  mrnumber      = {1253227},
-  mrreviewer    = {D.\ R.\ Heath-Brown},
-  doi           = {10.1007/BF03341964},
-  url           = {https://doi.org/10.1007/BF03341964}
-}
-@article{bourgain:93:on*3,
-  author        = {Bourgain, J.},
   title         = {On the {C}auchy problem for the {K}adomtsev-{P}etviashvili equation},
   journal       = {Geom. Funct. Anal.},
   fjournal      = {Geometric and Functional Analysis},
@@ -15074,6 +15059,21 @@
   mrreviewer    = {Daniel\ B\"{a}ttig},
   doi           = {10.1007/BF01896259},
   url           = {https://doi.org/10.1007/BF01896259}
+}
+@article{bourgain:93:on*3,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {60},
+  year          = {1993},
+  pages         = {21--32},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {11M99 (28A75)},
+  mrnumber      = {1253227},
+  mrreviewer    = {D.\ R.\ Heath-Brown},
+  doi           = {10.1007/BF03341964},
+  url           = {https://doi.org/10.1007/BF03341964}
 }
 @article{bourgain:94:approximation,
   author        = {Bourgain, Jean},
@@ -15097,7 +15097,7 @@
   fjournal      = {International Mathematics Research Notices},
   year          = {1994},
   number        = {11},
-  pages         = {475ff., approx. 21 pp.\},
+  pages         = {475ff., approx. 21 pp.},
   issn          = {1073-7928,1687-0247},
   mrclass       = {58G18 (34G20 35B99 35Q58 58F27 58F39)},
   mrnumber      = {1316975},
@@ -25386,21 +25386,6 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25414,6 +25399,21 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -28148,18 +28148,6 @@
 }
 @book{dunford.schwartz:88:linear,
   author        = {Dunford, Nelson and Schwartz, Jacob T.},
-  title         = {Linear operators. {P}art {I}},
-  series        = {Wiley Classics Library},
-  note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
-  publisher     = {John Wiley \& Sons, Inc., New York},
-  year          = {1988},
-  pages         = {xiv+858},
-  isbn          = {0-471-60848-3},
-  mrclass       = {47-01 (46-01)},
-  mrnumber      = {1009162}
-}
-@book{dunford.schwartz:88:linear*1,
-  author        = {Dunford, Nelson and Schwartz, Jacob T.},
   title         = {Linear operators. {P}art {II}},
   series        = {Wiley Classics Library},
   note          = {Spectral theory. Selfadjoint operators in Hilbert space, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1963 original, A Wiley-Interscience Publication},
@@ -28169,6 +28157,18 @@
   isbn          = {0-471-60847-5},
   mrclass       = {47-01 (46-01)},
   mrnumber      = {1009163}
+}
+@book{dunford.schwartz:88:linear*1,
+  author        = {Dunford, Nelson and Schwartz, Jacob T.},
+  title         = {Linear operators. {P}art {I}},
+  series        = {Wiley Classics Library},
+  note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
+  publisher     = {John Wiley \& Sons, Inc., New York},
+  year          = {1988},
+  pages         = {xiv+858},
+  isbn          = {0-471-60848-3},
+  mrclass       = {47-01 (46-01)},
+  mrnumber      = {1009162}
 }
 @article{dunlap.gu.ea:20:fluctuations,
   author        = {Dunlap, Alexander and Gu, Yu and Ryzhik, Lenya and Zeitouni, Ofer},
@@ -45972,7 +45972,7 @@
   volume        = {8},
   year          = {1998},
   number        = {1},
-  pages         = {22 pp.\},
+  pages         = {22 pp.},
   issn          = {1052-0600},
   mrclass       = {93E11},
   mrnumber      = {1650159},
@@ -62045,6 +62045,20 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -62058,20 +62072,6 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
