--- a/All.tex
+++ b/All.tex
@@ -34,10 +34,14 @@
 \begin{document}
 
 \maketitle
-\begin{center}
-  \includegraphics[scale=0.50]{Statistics.png}
-\end{center}
 \vfill
+
+\begin{center}
+  \includegraphics[scale=0.55]{Statistics.png}
+\end{center}
+
+
+\newpage
 \tableofcontents
 
 \newpage
