Update the entry for this repo that is just published at Zenodo.

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: cf6eafc8956c7e1752d69ce020c277a3e1cffba6
-% Date: 2023-11-15
+% Commit: 7ab62be8ea770e57d57353fd0ce722d3e5670d4e
+% Date: 2023-11-16
 % ---------------------------
 
 
@@ -21319,13 +21319,15 @@
   howpublished  = {url{https://github.com/chenle02/Fox-H\_Symbolic\_Tools}},
   note          = {Accessed: 11/08/2023}
 }
-@misc{chen:22:spdes-bib,
-  author        = {Chen, Le},
-  title         = {SPDEs-Bib: A Comprehensive Bibliography of Stochastic Partial Differential Equations and Related Topics},
-  year          = {2022},
-  publisher     = {GitHub Repository},
-  howpublished  = {url{https://github.com/chenle02/SPDEs-Bib}},
-  note          = {Accessed: 11/11/2023, V1.0}
+@misc{chen:23:spdes-bib,
+  author        = {Le Chen},
+  title         = {{SPDEs-Bib}: A Comprehensive Bibliography of Stochastic Partial Differential Equations and Related Topics},
+  month         = nov,
+  year          = 2023,
+  publisher     = {Zenodo},
+  version       = {V1.1},
+  doi           = {10.5281/zenodo.10143432},
+  url           = {https://doi.org/10.5281/zenodo.10143432}
 }
 @article{chen:90:moderate,
   author        = {Chen, Xia},
