Include my Fox H-function Zenodo record

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 7ab62be8ea770e57d57353fd0ce722d3e5670d4e
+% Commit: b93d9cc847532773fb6eeb9c56f709049fd71ac3
 % Date: 2023-11-16
 % ---------------------------
 
@@ -14352,22 +14352,6 @@
   mrreviewer    = {Alberto\ Torchinsky}
 }
 @article{bourgain:87:on,
-  author        = {Bourgain, J.},
-  title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
-  journal       = {Invent. Math.},
-  fjournal      = {Inventiones Mathematicae},
-  volume        = {87},
-  year          = {1987},
-  number        = {3},
-  pages         = {477--483},
-  issn          = {0020-9910,1432-1297},
-  mrclass       = {31A15},
-  mrnumber      = {874032},
-  mrreviewer    = {J.\ Siciak},
-  doi           = {10.1007/BF01389238},
-  url           = {https://doi.org/10.1007/BF01389238}
-}
-@article{bourgain:87:on*1,
   author        = {Bourgain, Jean},
   title         = {On pointwise ergodic theorems for arithmetic sets},
   journal       = {C. R. Acad. Sci. Paris S\'{e}r. I Math.},
@@ -14382,6 +14366,22 @@
   mrreviewer    = {F.\ Schweiger},
   doi           = {10.1007/BF02698838},
   url           = {https://doi.org/10.1007/BF02698838}
+}
+@article{bourgain:87:on*1,
+  author        = {Bourgain, J.},
+  title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
+  journal       = {Invent. Math.},
+  fjournal      = {Inventiones Mathematicae},
+  volume        = {87},
+  year          = {1987},
+  number        = {3},
+  pages         = {477--483},
+  issn          = {0020-9910,1432-1297},
+  mrclass       = {31A15},
+  mrnumber      = {874032},
+  mrreviewer    = {J.\ Siciak},
+  doi           = {10.1007/BF01389238},
+  url           = {https://doi.org/10.1007/BF01389238}
 }
 @incollection{bourgain:87:on*2,
   author        = {Bourgain, J.},
@@ -21319,15 +21319,23 @@
   howpublished  = {url{https://github.com/chenle02/Fox-H\_Symbolic\_Tools}},
   note          = {Accessed: 11/08/2023}
 }
+@misc{chen:23:some,
+  author        = {Le Chen},
+  title         = {Some symbolic tools for the Fox H-function},
+  month         = nov,
+  year          = 2023,
+  publisher     = {Zenodo},
+  doi           = {10.5281/zenodo.10143785},
+  url           = {https://doi.org/10.5281/zenodo.10143785}
+}
 @misc{chen:23:spdes-bib,
   author        = {Le Chen},
   title         = {{SPDEs-Bib}: A Comprehensive Bibliography of Stochastic Partial Differential Equations and Related Topics},
   month         = nov,
   year          = 2023,
   publisher     = {Zenodo},
-  version       = {V1.1},
-  doi           = {10.5281/zenodo.10143432},
-  url           = {https://doi.org/10.5281/zenodo.10143432}
+  doi           = {10.5281/zenodo.10143431},
+  url           = {https://doi.org/10.5281/zenodo.10143431}
 }
 @article{chen:90:moderate,
   author        = {Chen, Xia},
