Add Caputo's paper 1967.

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: b93d9cc847532773fb6eeb9c56f709049fd71ac3
+% Commit: c7afb2015def7eb13ca854c161ab01d4299c678e
 % Date: 2023-11-16
 % ---------------------------
 
@@ -14352,22 +14352,6 @@
   mrreviewer    = {Alberto\ Torchinsky}
 }
 @article{bourgain:87:on,
-  author        = {Bourgain, Jean},
-  title         = {On pointwise ergodic theorems for arithmetic sets},
-  journal       = {C. R. Acad. Sci. Paris S\'{e}r. I Math.},
-  fjournal      = {Comptes Rendus des S\'{e}ances de l'Acad\'{e}mie des Sciences. S\'{e}rie I. Math\'{e}matique},
-  volume        = {305},
-  year          = {1987},
-  number        = {10},
-  pages         = {397--402},
-  issn          = {0249-6291},
-  mrclass       = {28D05 (11L15 11L40 82A99)},
-  mrnumber      = {916338},
-  mrreviewer    = {F.\ Schweiger},
-  doi           = {10.1007/BF02698838},
-  url           = {https://doi.org/10.1007/BF02698838}
-}
-@article{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
   journal       = {Invent. Math.},
@@ -14382,6 +14366,22 @@
   mrreviewer    = {J.\ Siciak},
   doi           = {10.1007/BF01389238},
   url           = {https://doi.org/10.1007/BF01389238}
+}
+@article{bourgain:87:on*1,
+  author        = {Bourgain, Jean},
+  title         = {On pointwise ergodic theorems for arithmetic sets},
+  journal       = {C. R. Acad. Sci. Paris S\'{e}r. I Math.},
+  fjournal      = {Comptes Rendus des S\'{e}ances de l'Acad\'{e}mie des Sciences. S\'{e}rie I. Math\'{e}matique},
+  volume        = {305},
+  year          = {1987},
+  number        = {10},
+  pages         = {397--402},
+  issn          = {0249-6291},
+  mrclass       = {28D05 (11L15 11L40 82A99)},
+  mrnumber      = {916338},
+  mrreviewer    = {F.\ Schweiger},
+  doi           = {10.1007/BF02698838},
+  url           = {https://doi.org/10.1007/BF02698838}
 }
 @incollection{bourgain:87:on*2,
   author        = {Bourgain, J.},
@@ -17560,6 +17560,20 @@
   mrreviewer    = {Shi Zan Fang},
   doi           = {10.1214/ECP.v2-986},
   url           = {https://doi.org/10.1214/ECP.v2-986}
+}
+@article{caputo:67:linear,
+  author        = {Caputo, Michele},
+  title         = {Linear Models of Dissipation whose $Q$ is almost Frequency Independent--{II}},
+  journal       = {Geophysical Journal International},
+  volume        = {13},
+  number        = {5},
+  pages         = {529--539},
+  year          = {1967},
+  month         = {11},
+  issn          = {0956-540X},
+  doi           = {10.1111/j.1365-246X.1967.tb02303.x},
+  url           = {https://doi.org/10.1111/j.1365-246X.1967.tb02303.x},
+  eprint        = {https://academic.oup.com/gji/article-pdf/13/5/529/1600098/13-5-529.pdf}
 }
 @article{caravenna.carmona.ea:12:discrete-time,
   author        = {Caravenna, Francesco and Carmona, Philippe and P\'{e}tr\'{e}lis, Nicolas},
